# Ray-Tracer

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
inc/: app.hpp  camera.hpp  image.hpp  light_source.hpp  light_src.hpp  material.hpp  object.hpp  plane.hpp  point_light.hpp  ray.hpp  scene.hpp  sphere.hpp  transformation.hpp
inc/app/: app.hpp  camera.hpp  image.hpp  scene.hpp
inc/lights/: directional_light.hpp  light_source.hpp  point_light.hpp  spotlight.hpp
inc/objects/: object.hpp  plane.hpp  sphere.hpp  triangle.hpp  trianglemesh.hpp
inc/threadpool/: task_wrapper.h  thread_pool.h  thread_safe_queue.h  threads_joiner.h
src/: app.cpp  camera.cpp  image.cpp  light_source.cpp  light_src.cpp  main.cpp  material.cpp  object.cpp  plane.cpp  point_light.cpp  ray.cpp  scene.cpp  sphere.cpp  transformation.cpp
src/app/: app.cpp  camera.cpp  image.cpp  scene.cpp
src/lights/: directional_light.cpp  light_source.cpp  point_light.cpp  spotlight.cpp
src/objects/: object.cpp  plane.cpp  sphere.cpp  triangle.cpp  trianglemesh.cpp
src/threadpool/: thread_pool.cpp  threads_joiner.cpp
